--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
+// This controls ESLint, which is sort of like Grammarly but for our code
+// See https://nextjs.org/docs/basic-features/eslint
+
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "prettier"]
 }
