--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "next": "11.1.0",
     "react": "17.0.2",
