--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
+    "@prisma/client": "^2.30.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "next": "11.1.0",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
@@ -22,6 +24,7 @@
     "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.6",
+    "prisma": "^2.30.0",
     "tailwindcss": "^2.2.7"
   }
 }
